Update config and try to fix style issues.

--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: weirdvector
+  github: gregwoodio
   instagram: 
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: weirdvector
+  twitter: gregwoodio
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCTBZyuBg7YVzUm8TfwkzB7g
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
